--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,8 @@
 spring:
     application:
         name: security
+    config:
+        import: optional:configserver:http://localhost:8888
+    data:
+        mongodb:
+            uri: mongodb+srv://optimus:optimus123@cluster0.d8cot9o.mongodb.net/third_parties
