first commit for security microservice changes

--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 		</dependency>
 
 
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 			<version>4.1.1</version>
@@ -58,7 +58,7 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 			<version>4.1.1</version>
-		</dependency> -->
+		</dependency>
 
 
 		<dependency>
